---
source: tests/codegen_snapshot_tests.rs
assertion_line: 3802
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, PartialEq)]
enum Color {
    Red,
    Green,
    Blue,
}
impl incan_stdlib::reflection::HasTypeClassName for Color {
    fn __class_name__() -> &'static str {
        "Color"
    }
}
#[derive(Debug, Clone, PartialEq)]
enum Maybe {
    Some(i64),
    None,
}
impl incan_stdlib::reflection::HasTypeClassName for Maybe {
    fn __class_name__() -> &'static str {
        "Maybe"
    }
}
#[derive(Debug, Clone, PartialEq)]
enum Result {
    Ok(i64),
    Err(String),
}
impl incan_stdlib::reflection::HasTypeClassName for Result {
    fn __class_name__() -> &'static str {
        "Result"
    }
}
#[derive(Debug, Clone, PartialEq)]
enum Message {
    Quit,
    Move(i64, i64),
    Write(String),
    ChangeColor(i64, i64, i64),
}
impl incan_stdlib::reflection::HasTypeClassName for Message {
    fn __class_name__() -> &'static str {
        "Message"
    }
}
#[derive(Debug, Clone, PartialEq)]
enum Shape {
    Circle(f64),
    Rectangle(f64, f64),
    Triangle(f64, f64),
}
impl incan_stdlib::reflection::HasTypeClassName for Shape {
    fn __class_name__() -> &'static str {
        "Shape"
    }
}
#[derive(Debug, Clone, PartialEq)]
enum Status {
    Pending,
    InProgress,
    Complete,
    Failed,
}
impl incan_stdlib::reflection::HasTypeClassName for Status {
    fn __class_name__() -> &'static str {
        "Status"
    }
}
#[derive(Debug, Clone, PartialEq)]
enum Priority {
    Low,
    Medium,
    High,
    Critical,
}
impl incan_stdlib::reflection::HasTypeClassName for Priority {
    fn __class_name__() -> &'static str {
        "Priority"
    }
}
#[derive(Debug, Clone, PartialEq)]
enum DataContainer {
    Empty,
    Single(i64),
    Multiple(Vec<i64>),
    Mapped(std::collections::HashMap<String, i64>),
}
impl incan_stdlib::reflection::HasTypeClassName for DataContainer {
    fn __class_name__() -> &'static str {
        "DataContainer"
    }
}
fn get_color_name(color: Color) -> String {
    let _ = match color {
        Color::Red => {
            return "red".to_string();
        }
        Color::Green => {
            return "green".to_string();
        }
        Color::Blue => {
            return "blue".to_string();
        }
    };
}
fn process_maybe(value: Maybe) -> i64 {
    let _ = match value {
        Maybe::Some(x) => {
            return x * 2;
        }
        Maybe::None => {
            return -1;
        }
    };
}
fn handle_result(result: Result) -> String {
    let _ = match result {
        Result::Ok(value) => {
            return {
                let __parts: [&str; 2usize] = ["Success: ", ""];
                let __args: Vec<String> = vec![format!("{}", value)];
                incan_stdlib::strings::fstring(&__parts, &__args)
            };
        }
        Result::Err(error) => {
            return {
                let __parts: [&str; 2usize] = ["Error: ", ""];
                let __args: Vec<String> = vec![format!("{}", error)];
                incan_stdlib::strings::fstring(&__parts, &__args)
            };
        }
    };
}
fn handle_message(msg: Message) -> String {
    let _ = match msg {
        Message::Quit => {
            return "Quitting".to_string();
        }
        Message::Move(x, y) => {
            return {
                let __parts: [&str; 3usize] = ["Moving to (", ", ", ")"];
                let __args: Vec<String> = vec![format!("{}", x), format!("{}", y)];
                incan_stdlib::strings::fstring(&__parts, &__args)
            };
        }
        Message::Write(text) => {
            return {
                let __parts: [&str; 2usize] = ["Writing: ", ""];
                let __args: Vec<String> = vec![format!("{}", text)];
                incan_stdlib::strings::fstring(&__parts, &__args)
            };
        }
        Message::ChangeColor(r, g, b) => {
            return {
                let __parts: [&str; 4usize] = ["Color: RGB(", ", ", ", ", ")"];
                let __args: Vec<String> = vec![
                    format!("{}", r), format!("{}", g), format!("{}", b)
                ];
                incan_stdlib::strings::fstring(&__parts, &__args)
            };
        }
    };
}
fn calculate_area(shape: Shape) -> f64 {
    let _ = match shape {
        Shape::Circle(r) => {
            return 3.14159 * r * r;
        }
        Shape::Rectangle(w, h) => {
            return w * h;
        }
        Shape::Triangle(b, h) => {
            return 0.5 * b * h;
        }
    };
}
fn get_priority_level(priority: Priority) -> i64 {
    let _ = match priority {
        Priority::Low => {
            return 1;
        }
        Priority::Medium => {
            return 2;
        }
        Priority::High => {
            return 3;
        }
        Priority::Critical => {
            return 4;
        }
    };
}
fn count_items(container: DataContainer) -> i64 {
    let _ = match container {
        DataContainer::Empty => {
            return 0;
        }
        DataContainer::Single(_) => {
            return 1;
        }
        DataContainer::Multiple(items) => {
            return ::std::convert::identity(items.len() as i64);
        }
        DataContainer::Mapped(map) => {
            return ::std::convert::identity(map.len() as i64);
        }
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let color: Color = Color::Red;
    let color_name: String = get_color_name(color);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Color: ", ""]; let __args : Vec <
        String > = vec![format!("{}", color_name)]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let some_value: Maybe = Maybe::Some(42);
    let none_value: Maybe = Maybe::None;
    let result1: i64 = process_maybe(some_value);
    let result2: i64 = process_maybe(none_value);
    let _ = println!(
        "{}", { let __parts : [& str; 3usize] = ["Some: ", ", None: ", ""]; let __args :
        Vec < String > = vec![format!("{}", result1), format!("{}", result2)];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let ok_result: Result = Result::Ok(100);
    let err_result: Result = Result::Err("Something went wrong".to_string());
    let ok_msg: String = handle_result(ok_result);
    let err_msg: String = handle_result(err_result);
    let _ = println!("{}", ok_msg);
    let _ = println!("{}", err_msg);
    let quit_msg: Message = Message::Quit.clone();
    let move_msg: Message = Message::Move(10, 20);
    let write_msg: Message = Message::Write("Hello".to_string());
    let color_msg: Message = Message::ChangeColor(255, 0, 0);
    let _ = println!("{}", handle_message(quit_msg));
    let _ = println!("{}", handle_message(move_msg));
    let _ = println!("{}", handle_message(write_msg));
    let _ = println!("{}", handle_message(color_msg));
    let circle: Shape = Shape::Circle(5.0);
    let rectangle: Shape = Shape::Rectangle(4.0, 6.0);
    let triangle: Shape = Shape::Triangle(3.0, 8.0);
    let circle_area: f64 = calculate_area(circle);
    let rect_area: f64 = calculate_area(rectangle);
    let tri_area: f64 = calculate_area(triangle);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Circle area: ", ""]; let __args : Vec <
        String > = vec![format!("{}", circle_area)]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Rectangle area: ", ""]; let __args :
        Vec < String > = vec![format!("{}", rect_area)]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Triangle area: ", ""]; let __args : Vec
        < String > = vec![format!("{}", tri_area)]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let _status: Status = Status::InProgress;
    let priority: Priority = Priority::High;
    let priority_level: i64 = get_priority_level(priority);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Priority level: ", ""]; let __args :
        Vec < String > = vec![format!("{}", priority_level)];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let empty: DataContainer = DataContainer::Empty.clone();
    let single: DataContainer = DataContainer::Single(42);
    let multiple: DataContainer = DataContainer::Multiple(vec![1, 2, 3, 4, 5]);
    let mapped: DataContainer = DataContainer::Mapped(
        [("a".to_string(), 1), ("b".to_string(), 2), ("c".to_string(), 3)]
            .into_iter()
            .collect::<std::collections::HashMap<_, _>>(),
    );
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Empty count: ", ""]; let __args : Vec <
        String > = vec![format!("{}", count_items(empty))];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Single count: ", ""]; let __args : Vec
        < String > = vec![format!("{}", count_items(single))];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Multiple count: ", ""]; let __args :
        Vec < String > = vec![format!("{}", count_items(multiple))];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Mapped count: ", ""]; let __args : Vec
        < String > = vec![format!("{}", count_items(mapped))];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
}
fn main() {
    main();
}
